--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
   },
   "exclude": ["node_modules"],
   "files": ["./hardhat.config.ts"],
-  "include": ["src/**/*", "tasks/**/*", "test/**/*", "deploy/**/*", "types/"]
+  "include": ["src/**/*", "tasks/**/*", "tests/**/*", "deploy/**/*", "types/"]
 }
